# CppLoxParser

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
src/: lox_parser.cpp  lox_parser.h  main.cpp  scanner.cpp  scanner.h  token.h
